--- a/index.html
+++ b/index.html
@@ -27,51 +27,60 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="container-fluid col-md-12">
-                    
+            <div class="container-fluid col-md-12 col-lg-12 col-sm-12">
+
                 <!-- video player div -->
-                <div id="videoplayerid" class="row videosection" ng-show="playingVideo">
-                    <div class="col-large-12 backimage">
-                        <div class="text-center videoplayer" ng-model="playingVideo">
-<!--                            <video height="480" width="750" controls src="https://microsoft.sharepoint.com/teams/MBSDomoFC/Program%20Governance%20Docs/Transition/Support%20Transition%20Offshore/Over%20View%20of%20DBC/Support%20Transition%20KT%20Recordings/Different%20states%20of%20Opportunities%20related%20issues.mp4"></video>-->
-                            <video height="480" width="750" controls src=""></video>
-                            <h4 style="overflow:hidden" ng-show="playingVideo.VideoName">{{playingVideo.VideoName | limitTo: 50}}</h4>
-                            <p style="overflow:hidden" ng-show="playingVideo.VideoCategory">{{playingVideoplayingVideo.VideoCategory | limitTo: 20}}</p>
-                            <h6 style="overflow:hidden" ng-show="playingVideo.PresentedBy" class="clickMe">by {{playingVideo.PresentedBy | limitTo: 20}}</h6>
-                            <h6 style="overflow:hidden" ng-show="playingVideo.CreatedDate">on {{playingVideo.CreatedDate | date}}</h6>
-                        </div>
+                <div id="videoplayerid" class="row " ng-show="playingVideo">
+                    <!--                    <div class="col-md-12 col-lg-12">-->
+                    <div class="text-center videosection" ng-model="playingVideo">
+                        <!--                            <video height="480" width="750" controls src="https://microsoft.sharepoint.com/teams/MBSDomoFC/Program%20Governance%20Docs/Transition/Support%20Transition%20Offshore/Over%20View%20of%20DBC/Support%20Transition%20KT%20Recordings/Different%20states%20of%20Opportunities%20related%20issues.mp4"></video>-->
+                        <video id="videoId" controls play="addViewCount" src="http://www.w3schools.com/html/mov_bbb.mp4"></video>
+                        <h4 style="overflow:hidden" ng-show="playingVideo.VideoName">{{playingVideo.VideoName | limitTo: 100}}</h4>
+                        <p style="overflow:hidden; " ng-show="playingVideo.VideoCategory">{{playingVideo.VideoCategory | limitTo: 50}}</p>
+                        <h6 style="overflow:hidden; display:inline;" ng-show="playingVideo.PresentedBy" class="clickMe" ng-click="searchVideo(playingVideo.PresentedBy)">by {{playingVideo.PresentedBy | limitTo: 50}}</h6>
+                        <h6 style="overflow:hidden; display:inline;" ng-show="playingVideo.CreatedDate">on {{playingVideo.CreatedDate | date}}</h6>
                     </div>
+                    <!--                    </div>-->
                 </div>
 
                 <!-- end of video player div -->
 
-                <div class="row">
-                    <div class="col-large-12">
-                        <div class="text-center grad">
-                            <div class="bottom-aligned-text">
-                                <span id="font-white">Search for any video from our library</span>
-                                <br/>
-                                <div id="custom-search-input">
-                                    <div class="input-group col-md-12">
-                                        <input type="text" class="form-control input-lg" placeholder="Search here" ng-model="searchText" />
-                                        <span class="input-group-btn">
-                                  <button class="btn btn-info btn-lg" type="button" ng-click="search(searchText)">
+                <div class="row" id="searchdiv">
+
+                    <div class="text-center grad">
+                        <div class="bottom-aligned-text">
+                            <span id="font-white">Search for any video from our library</span>
+                            <br/>
+                            <form id="custom-search-input">
+                                <div class="input-group col-lg-12 col-md-12">
+                                    <input id="searchBox" type="text" class="form-control input-lg" placeholder="Search here" ng-model="searchText" />
+                                    <span class="input-group-btn">
+                                  <button class="btn btn-info btn-lg" type="button" ng-click="searchVideo(searchText)">
                                   <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-                                        </button>
-                                        </span>
-                                    </div>
+                                    </button>
+                                    </span>
                                 </div>
-                            </div>
+                            </form>
                         </div>
                     </div>
+
                 </div>
                 <br>
                 <div class="container">
 
                     <div class="row AllVideos">
-                        <h3>All videos</h3>
+
+                        <span id="backbutton" class="hidden clickMe" ng-click="loadAllVideos()">
+                            <a >
+                                <i class="glyphicon glyphicon-chevron-left"></i> Back to all videos
+                            </a>
+                             <br>  <br>
+                        </span>
+                        <h3 style="display:inline;">{{headingText}}</h3>
+                        <span class="glyphicon glyphicon-refresh glyphicon-refresh-animate" ng-hide="videos"></span>
+                        <span class="glyphicon glyphicon glyphicon-play" style="display:inline; color:dimgray;" ng-show="videos"></span>
                         <hr>
-                        <div class="col-md-2 col-large-2 col-sm-4 text-center" ng-repeat="video in filteredVideos" ng-class="{active : isSelected(section)}">
+                        <div class="col-md-3 col-lg-2 col-sm-4 col-xs-4 text-center" ng-repeat="video in filteredVideos" ng-class="{active : isSelected(section)}">
                             <div id="contentpanel" class="panel panel-default" ng-init="getAll()">
                                 <div class="panel-heading" style="height:120px;">
                                     <!-- <iframe width="180" height="180" ng-src="{{video.VideoURL}}" frameborder="0" allowfullscreen controls></iframe> -->
@@ -83,21 +92,19 @@
                                 <div class="panel-body" style="margin-top:-12px;">
                                     <h4 style="overflow:hidden" ng-show="video.VideoName">{{video.VideoName | limitTo: 50}}</h4>
                                     <p style="overflow:hidden" ng-show="video.VideoCategory">{{video.VideoCategory | limitTo: 20}}</p>
-                                    <h6 style="overflow:hidden" ng-show="video.PresentedBy" class="clickMe">by {{video.PresentedBy | limitTo: 20}}</h6>
+                                    <h6 style="overflow:hidden" ng-show="video.PresentedBy" class="clickMe" ng-click="searchVideo(video.PresentedBy)">by {{video.PresentedBy | limitTo: 20}}</h6>
                                     <h6 style="overflow:hidden" ng-show="video.CreatedDate">on {{video.CreatedDate | date}}</h6>
                                 </div>
                             </div>
                         </div>
-                        
+
 
                     </div>
                     <div class="row">
-<!--                        <div class="container col-md-8" style="height:100px;">-->
+                        <!--                        <div class="container col-md-8" style="height:100px;">-->
                         <pagination ng-model="currentPage" total-items="totalItems" max-size="maxSize" items-per-page="numPerPage">
                         </pagination>
-                        <h4>{{totalItems}}</h4>
-                        <h4>{{maxSize}}</h4>
-<!--                        </div>-->
+                        <!--                        </div>-->
                     </div>
 
 
