Added view count increment
Added video view count increment on click.

--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
             <div class="container">
                 <div class="row-fluid">
                     <div class="col-md-4 col-sm-6" style="float:left">
-                        <font color="black">Copyright &copy; Accenture 2015. ALL RIGHTS RESERVED</font>
+                        <a>Copyright &copy; Accenture 2015. ALL RIGHTS RESERVED</a>
                     </div>
                     <div class="col-md-4 "> </div>
                     <div class="col-md-4 col-sm-6">
-                        <font color="black">POWERED BY: DOMO</font>
+                        <a>Powered By : DOMO</a>
                     </div>
                 </div>
             </div>
